crates/dora-compiler/src/dora/tests/snapshots/dora_compiler__dora__tests__suspend__push_return.snap
---
source: crates/dora-compiler/src/dora/tests/suspend.rs
expression: op
---
module {
  func.func private @dora_fn_nop()
  func.func private @dora_fn_tracing(!llvm.ptr, i8, i64, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_write_result(!llvm.ptr, i64, i64, i64, i8)
  func.func private @dora_fn_is_static(!llvm.ptr) -> i8
  func.func private @dora_fn_exp(!llvm.ptr, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_keccak256_hasher(!llvm.ptr, i64, i64, !llvm.ptr)
  func.func private @dora_fn_calldata(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_calldata_size(!llvm.ptr) -> i64
  func.func private @dora_fn_calldata_copy(!llvm.ptr, i64, !llvm.ptr, i64)
  func.func private @dora_fn_data_load(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_data_section(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_data_section_size(!llvm.ptr) -> i64
  func.func private @dora_fn_data_section_copy(!llvm.ptr, i64, !llvm.ptr, i64)
  func.func private @dora_fn_chainid(!llvm.ptr) -> i64
  func.func private @dora_fn_callvalue(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_caller(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_gasprice_ptr(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_selfbalance_ptr(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_store_in_blobbasefee_ptr(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_gaslimit_ptr(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_extend_memory(!llvm.ptr, i64) -> !llvm.ptr
  func.func private @dora_fn_memory_ptr(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_memory_size(!llvm.ptr) -> i64
  func.func private @dora_fn_code_copy(!llvm.ptr, i64, !llvm.ptr, i64)
  func.func private @dora_fn_sload(!llvm.ptr, !llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_sstore(!llvm.ptr, !llvm.ptr, !llvm.ptr, i64) -> !llvm.ptr
  func.func private @dora_fn_append_log(!llvm.ptr, i64, i64)
  func.func private @dora_fn_append_log_with_one_topic(!llvm.ptr, i64, i64, !llvm.ptr)
  func.func private @dora_fn_append_log_with_two_topics(!llvm.ptr, i64, i64, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_append_log_with_three_topics(!llvm.ptr, i64, i64, !llvm.ptr, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_append_log_with_four_topics(!llvm.ptr, i64, i64, !llvm.ptr, !llvm.ptr, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_origin(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_coinbase(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_block_number(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_extcodesize(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_address(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_prevrando(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_timestamp_ptr(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_basefee_ptr(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_store_in_balance(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_ext_code_copy(!llvm.ptr, !llvm.ptr, !llvm.ptr, i64, i64) -> !llvm.ptr
  func.func private @dora_fn_blob_hash(!llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_block_hash(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_ext_code_hash(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_eofcreate(!llvm.ptr, i8, i64, i64, !llvm.ptr, i64, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_returncontract(!llvm.ptr, i8, i64, i64, i64, i64, i8) -> !llvm.ptr
  func.func private @dora_fn_call(!llvm.ptr, !llvm.ptr, !llvm.ptr, !llvm.ptr, i64, i64, i64, i64, i64, i8) -> !llvm.ptr
  func.func private @dora_fn_create(!llvm.ptr, i64, i64, !llvm.ptr, i64) -> !llvm.ptr
  func.func private @dora_fn_create2(!llvm.ptr, i64, i64, !llvm.ptr, i64, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_extcall_addr_validate(!llvm.ptr, !llvm.ptr) -> i8
  func.func private @dora_fn_extcall(!llvm.ptr, !llvm.ptr, !llvm.ptr, i64, i64, i64, i8) -> !llvm.ptr
  func.func private @dora_fn_returndata(!llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_returndata_size(!llvm.ptr) -> i64
  func.func private @dora_fn_returndata_copy(!llvm.ptr, i64, !llvm.ptr, i64) -> !llvm.ptr
  func.func private @dora_fn_selfdestruct(!llvm.ptr, !llvm.ptr) -> !llvm.ptr
  func.func private @dora_fn_tload(!llvm.ptr, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_tstore(!llvm.ptr, !llvm.ptr, !llvm.ptr)
  func.func private @dora_fn_func_stack_push(!llvm.ptr, i64, i64) -> i8
  func.func private @dora_fn_func_stack_pop(!llvm.ptr) -> i64
  func.func private @dora_fn_func_stack_grow(!llvm.ptr)
  func.func private @dora_fn_set_resume(!llvm.ptr, i32)
  func.func private @dora_fn_get_resume(!llvm.ptr) -> i32
  func.func private @op95(%arg0: !llvm.ptr, %arg1: !llvm.ptr, %arg2: !llvm.ptr, %arg3: !llvm.ptr, %arg4: !llvm.ptr) -> i8 {
    cf.br ^bb3
  ^bb1(%0: i8):  // 2 preds: ^bb3, ^bb4
    %c0_i64 = arith.constant 0 : i64
    %1 = llvm.load %arg1 : !llvm.ptr -> i64
    call @dora_fn_write_result(%arg0, %c0_i64, %c0_i64, %1, %0) : (!llvm.ptr, i64, i64, i64, i8) -> ()
    return %0 : i8
  ^bb2(%2: i8):  // no predecessors
    return %2 : i8
  ^bb3:  // pred: ^bb0
    %3 = llvm.load %arg1 : !llvm.ptr -> i64
    %c2_i64 = arith.constant 2 : i64
    call @dora_fn_nop() : () -> ()
    %4 = arith.cmpi uge, %3, %c2_i64 : i64
    %c80_i8 = arith.constant 80 : i8
    cf.cond_br %4, ^bb5, ^bb1(%c80_i8 : i8)
  ^bb4:  // pred: ^bb5
    %c1024_i64 = arith.constant 1024 : i64
    %5 = llvm.load %arg3 : !llvm.ptr -> i64
    %c1_i64 = arith.constant 1 : i64
    %6 = arith.addi %5, %c1_i64 : i64
    llvm.store %6, %arg3 : i64, !llvm.ptr
    %7 = arith.cmpi ult, %c1024_i64, %6 : i64
    %c92_i8 = arith.constant 92 : i8
    cf.cond_br %7, ^bb1(%c92_i8 : i8), ^bb6
  ^bb5:  // pred: ^bb3
    %8 = arith.subi %3, %c2_i64 : i64
    llvm.store %8, %arg1 : i64, !llvm.ptr
    cf.br ^bb4
  ^bb6:  // pred: ^bb4
    %c0_i256 = arith.constant 0 : i256
    %9 = llvm.load %arg4 : !llvm.ptr -> !llvm.ptr
    llvm.store %c0_i256, %9 : i256, !llvm.ptr
    %10 = llvm.getelementptr %9[1] : (!llvm.ptr) -> !llvm.ptr, i256
    llvm.store %10, %arg4 : !llvm.ptr, !llvm.ptr
    cf.br ^bb7
  ^bb7:  // pred: ^bb6
    %c0_i8 = arith.constant 0 : i8
    return %c0_i8 : i8
  }
  func.func public @call(%arg0: !llvm.ptr, %arg1: !llvm.ptr, %arg2: !llvm.ptr, %arg3: !llvm.ptr) -> i8 attributes {llvm.emit_c_interface} {
    %c0_i64 = arith.constant 0 : i64
    %0 = llvm.alloca %c0_i64 x !llvm.ptr : (i64) -> !llvm.ptr
    llvm.store %arg2, %0 : !llvm.ptr, !llvm.ptr
    cf.br ^bb9
  ^bb1(%1: i8):  // 13 preds: ^bb6, ^bb7, ^bb8, ^bb9, ^bb10, ^bb13, ^bb15, ^bb16, ^bb21, ^bb22, ^bb23, ^bb26, ^bb27
    %c0_i64_0 = arith.constant 0 : i64
    %2 = llvm.load %arg1 : !llvm.ptr -> i64
    call @dora_fn_write_result(%arg0, %c0_i64_0, %c0_i64_0, %2, %1) : (!llvm.ptr, i64, i64, i64, i8) -> ()
    return %1 : i8
  ^bb2(%3: i256):  // no predecessors
    llvm.unreachable
  ^bb3(%4: i8):  // 2 preds: ^bb12, ^bb19
    return %4 : i8
  ^bb4(%5: i32):  // no predecessors
    llvm.unreachable
  ^bb5:  // no predecessors
    llvm.unreachable
  ^bb6:  // pred: ^bb9
    %6 = llvm.load %arg1 : !llvm.ptr -> i64
    %c3_i64 = arith.constant 3 : i64
    call @dora_fn_nop() : () -> ()
    %7 = arith.cmpi uge, %6, %c3_i64 : i64
    %c80_i8 = arith.constant 80 : i8
    cf.cond_br %7, ^bb11, ^bb1(%c80_i8 : i8)
  ^bb7:  // pred: ^bb12
    %8 = call @op95(%arg0, %arg1, %arg2, %arg3, %0) : (!llvm.ptr, !llvm.ptr, !llvm.ptr, !llvm.ptr, !llvm.ptr) -> i8
    %9 = arith.cmpi ne, %8, %c0_i8_3 : i8
    cf.cond_br %9, ^bb1(%8 : i8), ^bb8
  ^bb8:  // pred: ^bb7
    %10 = llvm.load %arg1 : !llvm.ptr -> i64
    %c0_i64_1 = arith.constant 0 : i64
    call @dora_fn_nop() : () -> ()
    %11 = arith.cmpi uge, %10, %c0_i64_1 : i64
    %c80_i8_2 = arith.constant 80 : i8
    cf.cond_br %11, ^bb14, ^bb1(%c80_i8_2 : i8)
  ^bb9:  // pred: ^bb0
    %c0_i8 = arith.constant 0 : i8
    %c0_i8_3 = arith.constant 0 : i8
    %12 = arith.cmpi ne, %c0_i8, %c0_i8_3 : i8
    cf.cond_br %12, ^bb1(%c0_i8 : i8), ^bb6
  ^bb10:  // pred: ^bb11
    %c1024_i64 = arith.constant 1024 : i64
    %13 = llvm.load %arg3 : !llvm.ptr -> i64
    %c1_i64 = arith.constant 1 : i64
    %14 = arith.addi %13, %c1_i64 : i64
    llvm.store %14, %arg3 : i64, !llvm.ptr
    %15 = arith.cmpi ult, %c1024_i64, %14 : i64
    %c92_i8 = arith.constant 92 : i8
    cf.cond_br %15, ^bb1(%c92_i8 : i8), ^bb12
  ^bb11:  // pred: ^bb6
    %16 = arith.subi %6, %c3_i64 : i64
    llvm.store %16, %arg1 : i64, !llvm.ptr
    cf.br ^bb10
  ^bb12:  // pred: ^bb10
    %c32_i256 = arith.constant 32 : i256
    %17 = llvm.load %0 : !llvm.ptr -> !llvm.ptr
    llvm.store %c32_i256, %17 : i256, !llvm.ptr
    %18 = llvm.getelementptr %17[1] : (!llvm.ptr) -> !llvm.ptr, i256
    llvm.store %18, %0 : !llvm.ptr, !llvm.ptr
    %c0_i8_4 = arith.constant 0 : i8
    %19 = arith.cmpi ne, %c0_i8_4, %c0_i8_3 : i8
    cf.cond_br %19, ^bb3(%c0_i8_4 : i8), ^bb7
  ^bb13:  // pred: ^bb14
    %c1024_i64_5 = arith.constant 1024 : i64
    %20 = llvm.load %arg3 : !llvm.ptr -> i64
    %c-2_i64 = arith.constant -2 : i64
    %21 = arith.addi %20, %c-2_i64 : i64
    llvm.store %21, %arg3 : i64, !llvm.ptr
    %c2_i64 = arith.constant 2 : i64
    %22 = arith.cmpi ult, %20, %c2_i64 : i64
    %c91_i8 = arith.constant 91 : i8
    cf.cond_br %22, ^bb1(%c91_i8 : i8), ^bb15
  ^bb14:  // pred: ^bb8
    %23 = arith.subi %10, %c0_i64_1 : i64
    llvm.store %23, %arg1 : i64, !llvm.ptr
    cf.br ^bb13
  ^bb15:  // pred: ^bb13
    %24 = llvm.load %0 : !llvm.ptr -> !llvm.ptr
    %25 = llvm.getelementptr %24[-1] : (!llvm.ptr) -> !llvm.ptr, i256
    %26 = llvm.load %25 : !llvm.ptr -> i256
    llvm.store %25, %0 : !llvm.ptr, !llvm.ptr
    %27 = llvm.load %0 : !llvm.ptr -> !llvm.ptr
    %28 = llvm.getelementptr %27[-1] : (!llvm.ptr) -> !llvm.ptr, i256
    %29 = llvm.load %28 : !llvm.ptr -> i256
    llvm.store %28, %0 : !llvm.ptr, !llvm.ptr
    %c18446744073709551615_i256 = arith.constant 18446744073709551615 : i256
    %30 = arith.cmpi ugt, %29, %c18446744073709551615_i256 : i256
    %c84_i8 = arith.constant 84 : i8
    cf.cond_br %30, ^bb1(%c84_i8 : i8), ^bb16
  ^bb16:  // pred: ^bb15
    %31 = arith.trunci %29 : i256 to i64
    %c0_i64_6 = arith.constant 0 : i64
    %32 = arith.cmpi slt, %31, %c0_i64_6 : i64
    %c84_i8_7 = arith.constant 84 : i8
    cf.cond_br %32, ^bb1(%c84_i8_7 : i8), ^bb17
  ^bb17:  // pred: ^bb16
    %c0_i64_8 = arith.constant 0 : i64
    %33 = arith.cmpi ne, %31, %c0_i64_8 : i64
    cf.cond_br %33, ^bb21, ^bb18
  ^bb18:  // 2 preds: ^bb17, ^bb25
    %c1_i8 = arith.constant 1 : i8
    %34 = arith.trunci %26 : i256 to i64
    %35 = llvm.load %arg1 : !llvm.ptr -> i64
    call @dora_fn_write_result(%arg0, %34, %31, %35, %c1_i8) : (!llvm.ptr, i64, i64, i64, i8) -> ()
    return %c1_i8 : i8
  ^bb19:  // no predecessors
    %c0_i8_9 = arith.constant 0 : i8
    %36 = arith.cmpi ne, %c0_i8_9, %c0_i8_3 : i8
    cf.cond_br %36, ^bb3(%c0_i8_9 : i8), ^bb20
  ^bb20:  // pred: ^bb19
    %c0_i64_10 = arith.constant 0 : i64
    %c2_i8 = arith.constant 2 : i8
    %37 = llvm.load %arg1 : !llvm.ptr -> i64
    call @dora_fn_write_result(%arg0, %c0_i64_10, %c0_i64_10, %37, %c2_i8) : (!llvm.ptr, i64, i64, i64, i8) -> ()
    return %c2_i8 : i8
  ^bb21:  // pred: ^bb17
    %c18446744073709551615_i256_11 = arith.constant 18446744073709551615 : i256
    %38 = arith.cmpi ugt, %26, %c18446744073709551615_i256_11 : i256
    %c84_i8_12 = arith.constant 84 : i8
    cf.cond_br %38, ^bb1(%c84_i8_12 : i8), ^bb22
  ^bb22:  // pred: ^bb21
    %39 = arith.trunci %26 : i256 to i64
    %c0_i64_13 = arith.constant 0 : i64
    %40 = arith.cmpi slt, %39, %c0_i64_13 : i64
    %c84_i8_14 = arith.constant 84 : i8
    cf.cond_br %40, ^bb1(%c84_i8_14 : i8), ^bb23
  ^bb23:  // pred: ^bb22
    %41 = arith.addi %39, %31 : i64
    %c0_i64_15 = arith.constant 0 : i64
    %42 = arith.cmpi slt, %41, %c0_i64_15 : i64
    %c84_i8_16 = arith.constant 84 : i8
    cf.cond_br %42, ^bb1(%c84_i8_16 : i8), ^bb24
  ^bb24:  // pred: ^bb23
    %c31_i64 = arith.constant 31 : i64
    %c32_i64 = arith.constant 32 : i64
    %43 = arith.addi %41, %c31_i64 : i64
    %44 = arith.divui %43, %c32_i64 : i64
    %c32_i64_17 = arith.constant 32 : i64
    %45 = arith.muli %44, %c32_i64_17 : i64
    %46 = call @dora_fn_memory_size(%arg0) : (!llvm.ptr) -> i64
    %c31_i64_18 = arith.constant 31 : i64
    %c32_i64_19 = arith.constant 32 : i64
    %47 = arith.addi %46, %c31_i64_18 : i64
    %48 = arith.divui %47, %c32_i64_19 : i64
    %49 = arith.muli %48, %c32_i64_17 : i64
    %50 = arith.cmpi ult, %49, %45 : i64
    cf.cond_br %50, ^bb26, ^bb25
  ^bb25:  // 2 preds: ^bb24, ^bb28
    cf.br ^bb18
  ^bb26:  // pred: ^bb24
    %c3_i64_20 = arith.constant 3 : i64
    %c512_i64 = arith.constant 512 : i64
    %51 = arith.muli %48, %48 : i64
    %52 = arith.divui %51, %c512_i64 : i64
    %53 = arith.muli %48, %c3_i64_20 : i64
    %54 = arith.addi %52, %53 : i64
    %c3_i64_21 = arith.constant 3 : i64
    %c512_i64_22 = arith.constant 512 : i64
    %55 = arith.muli %44, %44 : i64
    %56 = arith.divui %55, %c512_i64_22 : i64
    %57 = arith.muli %44, %c3_i64_21 : i64
    %58 = arith.addi %56, %57 : i64
    %59 = arith.subi %58, %54 : i64
    %60 = llvm.load %arg1 : !llvm.ptr -> i64
    %61 = arith.cmpi ult, %60, %59 : i64
    scf.if %61 {
    } else {
      %66 = arith.subi %60, %59 : i64
      llvm.store %66, %arg1 : i64, !llvm.ptr
    }
    %c80_i8_23 = arith.constant 80 : i8
    cf.cond_br %61, ^bb1(%c80_i8_23 : i8), ^bb27
  ^bb27:  // pred: ^bb26
    %62 = call @dora_fn_extend_memory(%arg0, %45) : (!llvm.ptr, i64) -> !llvm.ptr
    %63 = llvm.getelementptr %62[0] : (!llvm.ptr) -> !llvm.ptr, i8
    %64 = llvm.load %63 : !llvm.ptr -> i8
    %c0_i8_24 = arith.constant 0 : i8
    %65 = arith.cmpi ne, %64, %c0_i8_24 : i8
    cf.cond_br %65, ^bb1(%64 : i8), ^bb28
  ^bb28:  // pred: ^bb27
    cf.br ^bb25
  }
}
